# MetaHeuristics

./: ABC.py  BA.py  LICENSE  README.md  _benchmarks.py  base.py  benchmarks.py  benchmarks_with_numba.py  compare_result.py  compare_result_grad_based.py  compare_result_metaheuristics.py  compare_result_metaheuristics_numba.py  nelder_mead.py  paraABC.py  paraBA.py  requirements.txt  test.py  test_conjugate.py  test_grad_based.py  test_metaheuristics.py  utils.py
algorithm/: __init__.py  nelder_mead.py
algorithm/grad_based/: __init__.py  conjugate.py  gradient_descent.py  nesterov.py  newton.py
algorithm/metaheuristics/: ABC.py  BA.py  FA.py  GWO.py  TLBO.py  __init__.py  paraABC.py  paraBA.py
cpp/: ABC.cpp  CMakeLists.txt  main.cpp
grad_based/: __init__.py  conjugate.py  gradient_descent.py  nesterov.py  newton.py
metaheuristics/: ABC.py  BA.py  GWO.py  __init__.py  paraABC.py  paraBA.py
metaheuristics/parallel/: paraABC.py  paraBA.py
metaheuristics/sequential/: ABC.py  BA.py  GWO.py  utils.py
metaheuristics_with_numba/parallel/: paraBA.py
metaheuristics_with_numba/sequential/: ABC.py  BA.py  GWO.py  utils.py
tests/: benchmarks.py  grad_based  metaheuristics  nelder_mead.py  test_all.py  test_grad_based.py  test_metaheuristics.py
utils/: __init__.py  base.py  common.py  grad_based.py  logging.py  parallel.py  parameter_search.py
